Alteração do component pedidos

--- a/src/app/components/cliente/clientes-list/clientes-list.component.html
+++ b/src/app/components/cliente/clientes-list/clientes-list.component.html
@@ -31,7 +31,7 @@
     <ng-container matColumnDef="pedido">
       <th mat-header-cell *matHeaderCellDef>Fazer Pedido</th>
       <td mat-cell *matCellDef="let row">
-        <a routerLink="/pedido/create" class="pedido">
+        <a routerLink="/cliente/pedido" class="pedido">
           <i class="material-icons">
             add_shopping_cart
           </i>
