--- a/src/app/components/pedidos/pedidos-create/pedidos-create.component.css
+++ b/src/app/components/pedidos/pedidos-create/pedidos-create.component.css
@@ -7,4 +7,11 @@ form {
   min-width: 150px;
   max-width: 300px;
 }
+.finalizar{
+  margin-left: 20px;
+}
+.salvar-button{
+  margin-left: 30px;
+}
+
 
