--- a/src/app/components/pedidos/pedidos-create/pedidos-create.component.css
+++ b/src/app/components/pedidos/pedidos-create/pedidos-create.component.css
@@ -7,11 +7,33 @@ form {
   min-width: 150px;
   max-width: 300px;
 }
-.finalizar{
+.buttons{
   margin-left: 20px;
+  margin-top: 20px;
+}
+.buttons .finalizar {
+  margin-right: 20px;
 }
 .salvar-button{
   margin-left: 30px;
+}
+.aviso{
+  margin-top: 70px;
+  display: flex;
+  flex-direction: column;
+  min-width: 150px;
+  max-width: 300px;
+  margin-left: 270px;
+}
+table {
+  width: 90%;
+  margin-left: 20px;
+  margin-top: 20px;
+}
+.total{
+  width: 87%;
+  margin-left: 20px;
+  text-align: right;
 }
 
 
