--- a/src/app/components/pedidos/pedidos-create/pedidos-create.component.html
+++ b/src/app/components/pedidos/pedidos-create/pedidos-create.component.html
@@ -33,7 +33,7 @@
   <!-- Valor Column -->
   <ng-container matColumnDef="valor">
     <th mat-header-cell *matHeaderCellDef> Valor </th>
-    <td mat-cell *matCellDef="let element"> {{element.preco}} </td>
+    <td mat-cell *matCellDef="let element"> R$ {{element.preco}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
