--- a/src/app/components/pedidos/pedidos-list/pedidos-list.component.html
+++ b/src/app/components/pedidos/pedidos-list/pedidos-list.component.html
@@ -58,12 +58,12 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Ações</th>
       <td mat-cell *matCellDef="let row">
-        <a routerLink="/cliente/update/{{ row.id }}" class="edit">
+        <a routerLink="/pedidos/update/{{ row.id }}" class="edit">
           <i class="material-icons">
             edit
           </i>
         </a>
-        <a mat-raised-button (click)="deleteCliente(row.id)"  class="delete">
+        <a mat-raised-button (click)="deletePedidos(row.id)"  class="delete">
           <i class="material-icons">
             delete_outline
           </i>
