--- a/src/app/components/pedidos/pedidos-update/pedidos-update.component.html
+++ b/src/app/components/pedidos/pedidos-update/pedidos-update.component.html
@@ -1,5 +1,5 @@
 <form>
-  <mat-card-title>Novo pedido</mat-card-title>
+  <mat-card-title>Atualize o pedido</mat-card-title>
   <mat-form-field>
     <input matInput placeholder="Digite o CPF do Cliente" [(ngModel)]="cliente.cpf"
            name="cpf">
@@ -49,7 +49,7 @@
   Exemplo : xxx-xxx-xxx,yyy-yyy-yyy
 </mat-card>
 <div class="buttons" *ngIf="visible">
-  <button class="finalizar" mat-raised-button (click)="create()" color="primary">
+  <button class="finalizar" mat-raised-button (click)="update()" color="primary">
     Finalizar
   </button>
   <button mat-raised-button (click)="clean()" color="primary">
