Ajustes e controle de erros

--- a/src/app/components/pedidos/pedidos-list/pedidos-list.component.html
+++ b/src/app/components/pedidos/pedidos-list/pedidos-list.component.html
@@ -20,7 +20,7 @@
     <!-- Coluna do Total da Compra -->
     <ng-container matColumnDef="totalCompra">
       <th mat-header-cell *matHeaderCellDef>Total da Compra</th>
-      <td mat-cell *matCellDef="let row">{{row.totalCompra}}</td>
+      <td mat-cell *matCellDef="let row">R${{row.totalCompra}}</td>
     </ng-container>
 
     <!-- Data da Compra -->
@@ -63,7 +63,7 @@
             edit
           </i>
         </a>
-        <a mat-raised-button (click)="deletePedidos(row.id)"  class="delete">
+        <a mat-raised-button (click)="deletePedidos(row.id)" class="delete">
           <i class="material-icons">
             delete_outline
           </i>
