ajustes de erros

--- a/src/app/components/pedidos/pedidos-update/pedidos-update.component.html
+++ b/src/app/components/pedidos/pedidos-update/pedidos-update.component.html
@@ -52,7 +52,7 @@
   <button class="finalizar" mat-raised-button (click)="update()" color="primary">
     Finalizar
   </button>
-  <button mat-raised-button (click)="clean()" color="primary">
+  <button mat-raised-button (click)="clean(null)" color="primary">
     Voltar
   </button>
 </div>
